# gardengod

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: plants.json
src/gardengod/: main.py  models.py  optimizer.py
src/gardengod/static/: index.html
tests/: test_main.py  test_optimizer.py
